# clang-code-extractor

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh  definition.txt  extract.py  extract.sh  extractor.cpp  file_sample.h  test_extractor.py  test_extractor.sh  windows-config.cmake
deprecated_scripts/: README.md  extract_extern.sh  extract_global.sh  extract_macro.sh
